manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mau2606
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-mau2606
  template:
    metadata:
      labels:
        app: demo-mau2606
    spec:
      containers:
        - name: demo-mau2606
          image: ghcr.io/azratul/demo-mau:latest
          ports:
            - containerPort: 8000
