manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mau2606
spec:
  selector:
    app: demo-mau2606
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
