manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-mauro
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo-mauro.kubernetes.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-mauro
                port:
                  number: 80
